--- a/pocket-hero/src/app/home/home-view/home-view.component.html
+++ b/pocket-hero/src/app/home/home-view/home-view.component.html
@@ -1,1 +1,19 @@
-<p>HOLA</p>
+<nb-layout>
+    <!-- Header -->
+    <nb-layout-header fixed>
+      <!-- Your header content goes here -->
+    </nb-layout-header>
+  <nb-button>Primary Button</nb-button>
+
+    <!-- Page Content -->
+    <nb-layout-column>
+      <!-- Your existing page content goes here -->
+      <!-- You can mix your existing HTML code with Nebular components here -->
+    </nb-layout-column>
+  
+    <!-- Footer -->
+    <nb-layout-footer fixed>
+      <!-- Your footer content goes here -->
+    </nb-layout-footer>
+  </nb-layout>
+  
