progress on main page

--- a/pocket-hero/src/styles.scss
+++ b/pocket-hero/src/styles.scss
@@ -1,4 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
-body {
-    background-color: orange;
+@import '@nebular/theme/styles/global/_styles.scss';
+
+nb-layout {
+  ::ng-deep nb-layout-column {
+    background-color: #228be1;
+  }
 }
