--- a/pocket-hero/src/app/home/home-view/home-view.component.html
+++ b/pocket-hero/src/app/home/home-view/home-view.component.html
@@ -39,6 +39,27 @@
             <p>Regístrate hoy mismo y comienza a disfrutar de todas las ventajas que Pocket Hero tiene para ti. Crea tu primer personaje, comparte tus creaciones con la comunidad y únete a partidas de todo el mundo.</p>
             <p>¡No esperes más! ¡Únete hoy a Pocket Hero!</p>
         </div>
+        <div class="image-container">
+            <img src="https://wallpapercave.com/wp/wp12696378.jpg" alt="Description of image">
+        </div>
+        <div class="text-under-image">
+        <div class="social-media">
+            <h1>Encuéntranos en redes sociales</h1>
+            <p>Mantente actualizado en todas las novedades de Pocket Hero</p>
+
+            <div class="social-icons">
+              <a href="your-facebook-url" target="_blank">
+                <img src="https://uxwing.com/wp-content/themes/uxwing/download/brands-and-social-media/discord-white-icon.png" alt="Facebook">
+              </a>
+              <a href="your-twitter-url" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/57/X_logo_2023_%28white%29.png" alt="Twitter">
+              </a>
+              <a href="your-instagram-url" target="_blank">
+                <img src="https://uxwing.com/wp-content/themes/uxwing/download/brands-and-social-media/instagram-white-icon.png" alt="Instagram">
+              </a>
+            </div>
+          </div>
+        </div>
     </nb-layout-column>
 
   
