progress on faq

--- a/pocket-hero/src/app/home/home-view/home-view.component.html
+++ b/pocket-hero/src/app/home/home-view/home-view.component.html
@@ -3,7 +3,7 @@
       <h1>Pocket Hero</h1>
     </nb-layout-header>
   
-    <nb-sidebar size="medium">
+    <nb-sidebar size="big">
       <nb-menu [items]="items"></nb-menu>
     </nb-sidebar>
   
