--- a/pocket-hero/src/app/home/faq/faq.component.css
+++ b/pocket-hero/src/app/home/faq/faq.component.css
@@ -3,28 +3,55 @@
 .image-container {
     position: relative;
     width: 100%;
-
   }
   
   .image-container img {
     width: 100%;
-    height: 250px;
+    height: 400px;
   }
   
   .image-container .image-text {
-    position: absolute;
-    top: 40%;
+    position: relative;
     font-family: 'Poppins', sans-serif;
     left: 25%;
-    transform: translate(-50%, -50%);
+    font-size: 300%;
+    transform: translate(-50%, -200%);
     line-height: 200%;
     color: white;
-    font-size: 300%;
     text-align: center;
   }
 
-  .faq-item
+.faq-item 
+{
+  font-size: 20px;
+  width: 80%;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  text-align: left;
+  font-family: 'Poppins', sans-serif;
+}
+
+  .faq-item h2
   {
     
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+    font-weight: 600;
+    color: #ffffff;
+    text-align: left;
+    margin-left: 5%;
+  }
 
+  .faq-item h2:hover {
+    color: #cccccc; 
+  }
+
+  .faq-item p
+  {
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    line-height:200%;
+    color: #ffffff;
+    text-align: left;
+    margin-left: 5%;
   }
