--- a/pocket-hero/src/app/home/home-view/home-view.component.html
+++ b/pocket-hero/src/app/home/home-view/home-view.component.html
@@ -1,7 +1,8 @@
 <nb-layout>
     <nb-layout-header fixed>
-      <h1>Pocket Hero</h1>
-    </nb-layout-header>
+      <img src="assets/pockethero.png" style="width: 60px;" alt="Pocket Hero Logo">
+      <h1 id="logo">Pocket Hero</h1>
+        </nb-layout-header>
   
     <nb-sidebar size="big">
       <nb-menu [items]="items"></nb-menu>
