--- a/pocket-hero/src/app/home/faq/faq.component.html
+++ b/pocket-hero/src/app/home/faq/faq.component.html
@@ -1,6 +1,7 @@
 <nb-layout>
-    <nb-layout-header fixed>
-        <h1>Pocket Hero</h1>
+  <nb-layout-header fixed>
+    <img src="assets/pockethero.png" style="width: 60px;" alt="Pocket Hero Logo">
+    <h1>Pocket Hero</h1>
       </nb-layout-header>
       <nb-sidebar size="medium">
         <nb-menu [items]="items"></nb-menu>
