--- a/pocket-hero/src/app/home/home-view/home-view.component.css
+++ b/pocket-hero/src/app/home/home-view/home-view.component.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Spectral&display=swap');
 .image-container {
     position: relative;
     width: 100%;
@@ -62,7 +62,14 @@
   }
   
   .social-icons a img {
-    width: 50px; /* Adjust as needed */
-    height: 50px; /* Adjust as needed */
+    width: 50px; 
+    height: 50px; 
   }
-  
+
+ #logo {
+    margin-top: 1%;
+    font-family: 'Spectral', serif;
+    font-size: 40px;
+
+  }
+
