--- a/pocket-hero/src/app/home/home-view/home-view.component.html
+++ b/pocket-hero/src/app/home/home-view/home-view.component.html
@@ -2,6 +2,7 @@
     <nb-layout-header fixed>
       <img src="assets/pockethero.png" style="width: 60px;" alt="Pocket Hero Logo">
       <h1 id="logo">Pocket Hero</h1>
+      <a routerLink="/login" class="login-link">Login</a>
         </nb-layout-header>
   
     <nb-sidebar size="big">
@@ -11,8 +12,8 @@
     <nb-layout-column>
         <div class="image-and-text">
             <div class="image-container">
-                <img src="https://images2.alphacoders.com/110/thumb-1920-1107088.jpg" alt="Description of image">
-                <div class="image-text">Únete ya y empieza a diseñar a <br> tu próximo gran protagonista</div>
+              <img src="https://images.squarespace-cdn.com/content/v1/625964627d9818640fa5b8cb/01acd42e-a904-482e-9e2e-9f0dcf7489a9/Crit+Academy+%7C+Campaign+Ideas+DND+%7C+DND+Weapons" alt="Description of image">
+                <div class="image-text">Únete ya y empieza a diseñar a <br> <strong>tu próximo gran protagonista</strong></div>
             </div>
             <div class="text-under-image">
                 <h1>¿Qué es Pocket Hero?</h1>
@@ -24,8 +25,8 @@
             </div>
         </div>
         <div class="image-container">
-            <img src="https://images.squarespace-cdn.com/content/v1/625964627d9818640fa5b8cb/01acd42e-a904-482e-9e2e-9f0dcf7489a9/Crit+Academy+%7C+Campaign+Ideas+DND+%7C+DND+Weapons" alt="Description of image">
-        </div>
+            <img src="https://images2.alphacoders.com/110/thumb-1920-1107088.jpg" alt="Description of image">
+          </div>
         <div class="text-under-image">
             <h1>Mantén a tus enemigos cerca y a tus jugadores más</h1>
             <p>Dirigir una partida nunca ha sido tan fácil. Mejora tu estátus de Jugador a Director y conecta con los miembros de tu campaña y sus personajes en todo momento.</p>
@@ -49,20 +50,21 @@
             <p>Mantente actualizado en todas las novedades de Pocket Hero</p>
 
             <div class="social-icons">
-              <a href="your-facebook-url" target="_blank">
+              <a href="Discord" target="_blank" alt="">
                 <img src="https://uxwing.com/wp-content/themes/uxwing/download/brands-and-social-media/discord-white-icon.png" alt="Facebook">
               </a>
-              <a href="your-twitter-url" target="_blank">
+              <a href="https://x.com/pocketheroesp" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/57/X_logo_2023_%28white%29.png" alt="Twitter">
               </a>
-              <a href="your-instagram-url" target="_blank">
-                <img src="https://uxwing.com/wp-content/themes/uxwing/download/brands-and-social-media/instagram-white-icon.png" alt="Instagram">
+              <a href="Patreon" target="_blank">
+                <img src="https://improbable.com/wp-content/uploads/2020/08/logo-patreon-white.png" alt="Patreon">
               </a>
             </div>
           </div>
         </div>
+        <app-pocket-footer></app-pocket-footer>
+
     </nb-layout-column>
 
-  
-    <nb-layout-footer>Contact us</nb-layout-footer>
-</nb-layout>
+
+  </nb-layout>
